[package]
name = "e2e"
description = "End-to-end Testing for Stylus"
version = "0.1.0"
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
keywords = ["arbitrum", "ethereum", "stylus", "integration-testing", "tests"]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Ifechukwudaniel/e2e-stylus.git"

[dependencies]
alloy =  { version = "=0.1.4", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
] }

tokio = { version = "1.12.0", features = ["process"] }
eyre = "0.6.8"
regex = "1.10.4"
once_cell = "1.19.0"
koba =  "0.2.0"
e2e-proc = {git = "https://github.com/Ifechukwudaniel/e2e-proc-stylus"}
toml = "0.8.13"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = "warn"
all = "warn"
